--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sketch-module-json-sync",
   "version": "0.1.0",
-  "description": "",
+  "description": "A sketch module to export and import a sketch file to json",
   "main": "build/index.js",
   "scripts": {
     "prebublish": "make build",
