--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "sketch-module-json-sync",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A sketch module to export and import a sketch file to json",
   "main": "build/index.js",
-  "files": ["build"],
+  "files": [
+    "build"
+  ],
   "scripts": {
     "prepublish": "make build",
     "test": "make test"
@@ -23,7 +25,7 @@
     "eslint-config-sketch": "0.1.2"
   },
   "dependencies": {
-    "sketch-module-fs": "^0.1.1",
+    "sketch-module-fs": "0.1.2",
     "to-camel-case": "1.0.0"
   }
 }
