--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sketch-module-json-sync",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "A sketch module to export and import a sketch file to json",
   "main": "build/index.js",
   "files": [
@@ -22,10 +22,10 @@
   "homepage": "https://github.com/mathieudutour/sketch-module-json-sync#readme",
   "devDependencies": {
     "@mathieudutour/js-fatigue": "^1.0.7",
-    "eslint-config-sketch": "0.1.2"
+    "eslint-config-sketch": "^0.1.2"
   },
   "dependencies": {
-    "sketch-module-fs": "0.1.2",
-    "to-camel-case": "1.0.0"
+    "sketch-module-fs": "^0.1.2",
+    "to-camel-case": "^1.0.0"
   }
 }
